--- a/event-tyosi.html
+++ b/event-tyosi.html
@@ -117,7 +117,7 @@
                                 </div>
 
                                 <div class="info-card">
-                                    <h4>⚡ 効率的な進め方</h4>
+                                    <h4>【重要】早く終わらせるコツ</h4>
                                     <ul class="energy-list">
                                         <li>
                                             <span>事業強化を優先</span>
@@ -129,17 +129,17 @@
                                         </li>
                                         <li>
                                             <span>スポンサー利用</span>
-                                            <span>マス効果を強化して資金獲得量を増やす。スタートマスで獲得可能。</span>
+                                            <span>特に、球団運営事業マス効果を強化して資金獲得量を増やすこれ早く終わらせるコツ。</span>
                                         </li>
                                     </ul>
                                 </div>
 
                                 <div class="info-card">
-                                    <h4>📊 攻略のコツ</h4>
+                                    <h4>攻略のコツ</h4>
                                     <ul class="bonus-list">
                                         <li>
-                                            <span>ファン数を増やす</span>
-                                            <span>グッズ事業マスでの資金獲得量がアップ。ファン獲得マスを積極的に目指す。</span>
+                                            <span>球団運営事業を増やす</span>
+                                            <span>球団運営事業マスでの資金獲得量がアップ。球団運営事業マスを積極的に目指す。</span>
                                         </li>
                                         <li>
                                             <span>イベントコスト管理</span>
@@ -157,14 +157,14 @@
 
                     <!-- Gameplay Guide -->
                     <section class="section gameplay-guide">
-                        <h2 class="section-title">🎮 イベントシステム解説</h2>
+                        <h2 class="section-title">イベントシステム解説</h2>
                         <div class="article-grid">
                             <article class="article-card">
                                 <div class="article-image">
                                     <img src="/picture/owner-life-map.jpeg?height=150&width=250" alt="マップ進行">
                                 </div>
                                 <div class="article-content">
-                                    <h3>🗺️ マップ進行</h3>
+                                    <h3>①マップ進行</h3>
                                     <p><strong>サイコロでマップを進もう</strong></p>
                                     <p>・イベントコスト1消費でサイコロを振る</p>
                                     <p>・ファン獲得マスやランダムイベントマスを活用</p>
@@ -178,7 +178,7 @@
                                     <img src="/picture/business-level.jpeg?height=150&width=250" alt="事業強化">
                                 </div>
                                 <div class="article-content">
-                                    <h3>🏢 事業強化</h3>
+                                    <h3>②事業強化</h3>
                                     <p><strong>事業レベルを上げて効果アップ</strong></p>
                                     <p>・資金を消費して事業レベルを強化</p>
                                     <p>・所持資金が多いほど強化効果が大きい</p>
@@ -192,7 +192,7 @@
                                     <img src="/placeholder.svg?height=150&width=250" alt="スポンサー">
                                 </div>
                                 <div class="article-content">
-                                    <h3>🤝 スポンサー活用</h3>
+                                    <h3>③ スポンサー活用</h3>
                                     <p><strong>マス効果を強化</strong></p>
                                     <p>・スタートマスでスポンサー獲得</p>
                                     <p>・マス効果を強化して資金やファン増加</p>
