--- a/event-sunau9.html
+++ b/event-sunau9.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <!-- 概要 -->
-              <img src="picture/IN_ev009_03mnhLpa.jpeg?height=300&width=800" alt="スカウティングナイン">
+              <img src="picture/JPEG画像.jpeg?height=300&width=800" alt="スカウティングナイン">
                 <section class="section event-overview">
                     <h2 class="section-title">📘 イベント概要</h2>
                     <ul>
