--- a/event-sunau9.html
+++ b/event-sunau9.html
@@ -61,7 +61,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1 class="page-title">選手の潜在能力を見抜け！イベント「スカウティングナイン」攻略ガイド</h1>
+            <h1 class="page-title">「スカウティングナイン」攻略ガイド</h1>
             <p class="page-subtitle">9月18日(木)15:00 ～ 9月25日(木)12:59 開催。眼力を磨いて、名門球団を目指そう！</p>
         </div>
     </section>
@@ -87,25 +87,25 @@
 
                     <h3>眼力ptとは何か</h3>
                     <ul>
-                        <li>イベント試合で「活躍ゲージ」の獲得量に応じて眼力ptを得られる。試合ごとに最大で獲得可能な眼力ptが設定されている。 :contentReference[oaicite:0]{index=0}</li>
-                        <li>眼力ptが高いほど、スカウト時の寸評（選手の能力、契約年数・ポジション等）の情報が多く開示される。情報が多いほど有利。 :contentReference[oaicite:1]{index=1}</li>
-                        <li>自動試合や試合リタイアでは眼力ptを得られないか非常に低くなる場合があるので注意。 :contentReference[oaicite:2]{index=2}</li>
-                        <li>眼力ptには上限があり、スカウトシーズンの開始時にリセットされる。 :contentReference[oaicite:3]{index=3}</li>
+                        <li>イベント試合で「活躍ゲージ」の獲得量に応じて眼力ptを得られる。試合ごとに最大で獲得可能な眼力ptが設定されている。 </li>
+                        <li>眼力ptが高いほど、スカウト時の寸評（選手の能力、契約年数・ポジション等）の情報が多く開示される。情報が多いほど有利。 </li>
+                        <li>自動試合や試合リタイアでは眼力ptを得られないか非常に低くなる場合があるので注意。 </li>
+                        <li>眼力ptには上限があり、スカウトシーズンの開始時にリセットされる。 </li>
                     </ul>
 
                     <h3>スカウトシーズンと選手獲得の流れ</h3>
                     <ul>
-                        <li>イベント試合を一定数こなすと、スカウトシーズンが発生。一定期間ごとにスカウト候補選手をリストから獲得できる。 :contentReference[oaicite:4]{index=4}</li>
-                        <li>スカウト候補は常に見えているわけではなく、獲得前は「寸評」（部分的な情報）しか公開されない。眼力ptが高いと寸評内容が豊富になるため、より良い選手を見分けやすい。 :contentReference[oaicite:5]{index=5}</li>
-                        <li>契約年数が設定されており、契約年数が0の選手は退団。契約更改や慰留制度で一部選手を残すことが可能。 :contentReference[oaicite:6]{index=6}</li>
-                        <li>スカウト方針（ポジション指定など）を設定でき、補強が必要なポジションを狙うことが可能。 :contentReference[oaicite:7]{index=7}</li>
+                        <li>イベント試合を一定数こなすと、スカウトシーズンが発生。一定期間ごとにスカウト候補選手をリストから獲得できる。 </li>
+                        <li>スカウト候補は常に見えているわけではなく、獲得前は「寸評」（部分的な情報）しか公開されない。眼力ptが高いと寸評内容が豊富になるため、より良い選手を見分けやすい。 </li>
+                        <li>契約年数が設定されており、契約年数が0の選手は退団。契約更改や慰留制度で一部選手を残すことが可能。 </li>
+                        <li>スカウト方針（ポジション指定など）を設定でき、補強が必要なポジションを狙うことが可能。 </li>
                     </ul>
 
                     <h3>球団運営pt・合計オーダーpt・ミッションについて</h3>
                     <ul>
-                        <li>球団運営pt：試合の勝利・選手の強さ・活躍ゲージ等が影響。これを累計でためていくと報酬が得られる。 :contentReference[oaicite:8]{index=8}</li>
-                        <li>合計オーダーpt：イベントオーダー編成（獲得した選手のランク・ステータス）によって決まる。オーダーを強くするほどこのptが高くなる。報酬ラインあり。 :contentReference[oaicite:9]{index=9}</li>
-                        <li>ミッション：試合数・対戦成績・選手のステータス条件・スカウト回数など多彩なものがある。全部で20個程度あることが一般的。ミッション達成で追加報酬（特訓コーチ、契約書ほか）。 :contentReference[oaicite:10]{index=10}</li>
+                        <li>球団運営pt：試合の勝利・選手の強さ・活躍ゲージ等が影響。これを累計でためていくと報酬が得られる。 </li>
+                        <li>合計オーダーpt：イベントオーダー編成（獲得した選手のランク・ステータス）によって決まる。オーダーを強くするほどこのptが高くなる。報酬ラインあり。 </li>
+                        <li>ミッション：試合数・対戦成績・選手のステータス条件・スカウト回数など多彩なものがある。全部で20個程度あることが一般的。ミッション達成で追加報酬（特訓コーチ、契約書ほか）。</li>
                     </ul>
                 </section>
 
@@ -116,42 +116,42 @@
 
                         <div class="tip-card">
                             <h4>1. 手動で試合を操作して勝利＆活躍ゲージを稼ぐ</h4>
-                            <p>自動試合よりも手動操作の方が活躍ゲージを高くしやすく、その分球団運営ptも眼力ptも伸びる。特に序盤はオーダーが弱いため、自動で負けるリスクを避ける。 :contentReference[oaicite:11]{index=11}</p>
+                            <p>自動試合よりも手動操作の方が活躍ゲージを高くしやすく、その分球団運営ptも眼力ptも伸びる。特に序盤はオーダーが弱いため、自動で負けるリスクを避ける。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>2. 眼力ptを可能な限りリセット前に高く保つ</h4>
-                            <p>眼力ptが満タン（上限）に近い状態でスカウトシーズンを迎えることで、スカウトで見える情報が多くなる。寸評が詳細になるので、いい選手を選びやすくなる。 :contentReference[oaicite:12]{index=12}</p>
+                            <p>眼力ptが満タン（上限）に近い状態でスカウトシーズンを迎えることで、スカウトで見える情報が多くなる。寸評が詳細になるので、いい選手を選びやすくなる。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>3. スカウト方針・ポジション指定を活用する</h4>
-                            <p>自分のオーダーで手薄なポジションを優先的に補強。複数ポジションを守れるユーティリティ選手がいると組み替え自由度アップ。契約年数も確認して取れるなら長めの契約の選手を。 :contentReference[oaicite:13]{index=13}</p>
+                            <p>自分のオーダーで手薄なポジションを優先的に補強。複数ポジションを守れるユーティリティ選手がいると組み替え自由度アップ。契約年数も確認して取れるなら長めの契約の選手を。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>4. 球団ランクを上げて試合報酬を増やす</h4>
-                            <p>勝利数に応じて球団ランクが上がる。球団ランクが高いほど試合で得られる球団運営ptが増えるし、スカウト機会・慰留可能人数などの恩恵あり。 :contentReference[oaicite:14]{index=14}</p>
+                            <p>勝利数に応じて球団ランクが上がる。球団ランクが高いほど試合で得られる球団運営ptが増えるし、スカウト機会・慰留可能人数などの恩恵あり。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>5. ビッグゲームを狙う</h4>
-                            <p>ビッグゲーム発生条件を満たせば球団運営ptが2倍になることもある。例えば勝利数や球団ランクなどで条件があるので、仕様を把握して近づけておこう。特に9月等の月はビッグゲーム発生のチャンス。 :contentReference[oaicite:15]{index=15}</p>
+                            <p>ビッグゲーム発生条件を満たせば球団運営ptが2倍になることもある。例えば勝利数や球団ランクなどで条件があるので、仕様を把握して近づけておこう。特に9月等の月はビッグゲーム発生のチャンス。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>6. 長期契約の選手を優先して入手・維持する</h4>
-                            <p>契約年数の長い選手を選べば、契約切れによる退団リスクが低くなり、オーダーpt・球団運営ptを長期間にわたり安定させられる。慰留制度を使って退団を防ぐ。 :contentReference[oaicite:16]{index=16}</p>
+                            <p>契約年数の長い選手を選べば、契約切れによる退団リスクが低くなり、オーダーpt・球団運営ptを長期間にわたり安定させられる。慰留制度を使って退団を防ぐ。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>7. Sランク選手を早めに揃えてオーダーpt報酬を見据える</h4>
-                            <p>報酬には「合計オーダーpt」でSランク確率30%契約書等があるので、オーダーptが高くなる構成を意識。Sランク・ステータスの高い選手を入れていくこと。 :contentReference[oaicite:17]{index=17}</p>
+                            <p>報酬には「合計オーダーpt」でSランク確率30%契約書等があるので、オーダーptが高くなる構成を意識。Sランク・ステータスの高い選手を入れていくこと。 </p>
                         </div>
 
                         <div class="tip-card">
                             <h4>8. ミッション報酬も逃さずチェック</h4>
-                            <p>試合勝利数、選手スカウト数、選手ステータス（例：ステータス75以上や合計ステータスでの条件）などミッションが複数ある。日々チェックして手を抜かないこと。 :contentReference[oaicite:18]{index=18}</p>
+                            <p>試合勝利数、選手スカウト数、選手ステータス（例：ステータス75以上や合計ステータスでの条件）などミッションが複数ある。日々チェックして手を抜かないこと。</p>
                         </div>
 
                     </div>
@@ -164,22 +164,22 @@
                         <div class="reward-card">
                             <h4>累計球団運営pt報酬例</h4>
                             <ul>
-                                <li>1,400,000pt：Sランク契約書が報酬ラインに含まれることが多い。 :contentReference[oaicite:19]{index=19}</li>
-                                <li>途中報酬には経験値、コイン、スカウトP、契約書等々。毎日の達成を積み重ねることが大切。 :contentReference[oaicite:20]{index=20}</li>
+                                <li>1,400,000pt：Sランク契約書が報酬ラインに含まれることが多い。 </li>
+                                <li>途中報酬には経験値、コイン、スカウトP、契約書等々。毎日の達成を積み重ねることが大切。 </li>
                             </ul>
                         </div>
                         <div class="reward-card">
                             <h4>合計オーダーpt報酬例</h4>
                             <ul>
-                                <li>報酬ライン：約125,000pt前後でAランク限界突破コーチや契約書など。 :contentReference[oaicite:21]{index=21}</li>
-                                <li>Sランク確率30%契約書など、上級報酬が用意されているラインも存在。 :contentReference[oaicite:22]{index=22}</li>
+                                <li>報酬ライン：約125,000pt前後でAランク限界突破コーチや契約書など。 </li>
+                                <li>Sランク確率30%契約書など、上級報酬が用意されているラインも存在。 </li>
                             </ul>
                         </div>
                         <div class="reward-card">
                             <h4>ミッション報酬例</h4>
                             <ul>
-                                <li>「イベント内で30勝」「球団ランクを強豪にする」「投手または野手でステータス75以上の選手を複数起用」など。 :contentReference[oaicite:23]{index=23}</li>
-                                <li>ミッション20個達成で Sランク特訓コーチなどの豪華素材。 :contentReference[oaicite:24]{index=24}</li>
+                                <li>「イベント内で30勝」「球団ランクを強豪にする」「投手または野手でステータス75以上の選手を複数起用」など。 </li>
+                                <li>ミッション20個達成で Sランク特訓コーチなどの豪華素材。 </li>
                             </ul>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                     <h2 class="section-title">❓ よくある質問（FAQ）</h2>
                     <div class="faq-item">
                         <h4>Q1：自動試合でも報酬を回収できる？</h4>
-                        <p>A：はい、報酬自体は回収可能ですが、自動試合では勝率・活躍ゲージ・眼力ptが低くなりがちで、報酬達成までに要する試合数や時間が多くなります。効率重視なら手動で操作できるところは操作すべき。 :contentReference[oaicite:25]{index=25}</p>
+                        <p>A：はい、報酬自体は回収可能ですが、自動試合では勝率・活躍ゲージ・眼力ptが低くなりがちで、報酬達成までに要する試合数や時間が多くなります。効率重視なら手動で操作できるところは操作すべき。 </p>
                     </div>
                     <div class="faq-item">
                         <h4>Q2：どの選手を優先してスカウトすべき？</h4>
@@ -201,11 +201,11 @@
                             <li>契約年数が長いもの</li>
                             <li>ユーティリティ性がある選手（複数ポジション可能）</li>
                         </ol>
-                        <p>また、ポジション指定を使って手薄なポジションを埋めることも重要。 :contentReference[oaicite:26]{index=26}</p>
+                        <p>また、ポジション指定を使って手薄なポジションを埋めることも重要。 </p>
                     </div>
                     <div class="faq-item">
                         <h4>Q3：イベント終了後に選手はどうなる？</h4>
-                        <p>A：多くの場合、イベント専用オーダーで使う選手なので、イベント終了後にはオーダーから外れるか消失する仕様です。獲得報酬（契約書等）は残る。具体仕様はその回のイベント告知を確認。 :contentReference[oaicite:27]{index=27}</p>
+                        <p>A：多くの場合、イベント専用オーダーで使う選手なので、イベント終了後にはオーダーから外れるか消失する仕様です。獲得報酬（契約書等）は残る。具体仕様はその回のイベント告知を確認。 </p>
                     </div>
                 </section>
             </div>
