--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                                     </span>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">【速報】調子くんのオーナーライフが開催</h3>
-                                    <p class="news-excerpt">早く終わるコツは、スポンサー…？</p>
+                                    <h3 class="news-title">【速報】スカウティングナインが開催</h3>
+                                    <p class="news-excerpt">球団運営pt・合計オーダーpt・ミッションがコツ！</p>
                                     <a href="events.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年9月12日</span>
+                                        <span class="news-date">2025年9月19日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
