--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 
                             <div class="form-group">
                                 <label for="email">メールアドレス <span class="required">*</span></label>
-                                <input type="email" id="email" name="email" required placeholder="6nen3kumivr.1.10@gmail.com">
+                                <input type="email" id="email" name="email" required placeholder="example@example.com">
                                 <small>返信が必要な場合は必ずご入力ください</small>
                             </div>
 
@@ -322,7 +322,7 @@
                         <div class="quick-info">
                             <div class="info-item">
                                 <span class="info-label">メール</span>
-                                <span class="info-value">info@example.com</span>
+                                <span class="info-value">6nen3kumivr.1.10@gmail.com</span>
                             </div>
                             <div class="info-item">
                                 <span class="info-label">回答時間</span>
