--- a/beginner.html
+++ b/beginner.html
@@ -107,8 +107,8 @@
                                         <span>選手育成の基本</span>
                                     </li>
                                     <li>
-                                        <span>オートプレイ</span>
-                                        <span>序盤は積極活用</span>
+                                        <span>自操作</span>
+                                        <span>序盤は自操作をして慣れる</span>
                                     </li>
                                     <li>
                                         <span>スタミナ管理</span>
@@ -185,7 +185,7 @@
                                 </div>
                                 <div class="article-content">
                                     <h3>ステップ2：Vロードを進める</h3>
-                                    <p>Vロードではスタミナ管理が重要。序盤はオートプレイを活用して効率よく育成を進めましょう。</p>
+                                    <p>Vロードではスタミナ管理が重要。序盤は効率などを重視せず、まずプロスピに慣れることが重要です。</p>
                                     <p><strong>コツ：</strong>スタミナが満タンにならないよう定期的にプレイ</p>
                                 </div>
                             </article>
