--- a/event-sunau9.html
+++ b/event-sunau9.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FWTXYJ505H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FWTXYJ505H');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロスピAのイベント「スカウティングナイン」の攻略方法を徹底解説。眼力pt・オーダーpt・球団運営ptの稼ぎ方、スカウト方針、報酬・ミッションの見逃し防止のコツまで。">
