--- a/event-tyosi.html
+++ b/event-tyosi.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FWTXYJ505H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FWTXYJ505H');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="プロスピAのイベント「稼げ！調子くんのオーナーライフ」の攻略情報を詳しく解説。効率的な進め方や報酬の獲得方法、資金稼ぎのコツまで完全網羅。">
