--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/IN_ev044_01ydkr.jpeg?height=200&width=400" alt="選手評価">
+                                    <img src="/picture/キャラバン.jpeg?height=200&width=400" alt="イベント">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">ホームランダービー開催中！</h3>
-                                    <p class="news-excerpt">series2のsランクを貰おう！ホームランダービーの攻略法を解説します。</p>
-                                    <a href="events.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">「日本縦断！ドリームキャラバン」開催！11月11日(火)14:59まで！</h3>
+                                    <p class="news-excerpt">アニバーサリー契約書（第一弾）をもらおう！効率的なやりかたは？</p>
+                                    <a href="event-kyaraban.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年10月29日</span>
+                                        <span class="news-date">2025年11月04日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
