--- a/event-kyaraban.html
+++ b/event-kyaraban.html
@@ -98,7 +98,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/キャラバン.jpeg?height=300&width=800" alt="ドリームキャラバン">
+                            <img src="/picture/キャラバン.jpg?height=300&width=800" alt="ドリームキャラバン">
                             <div class="gacha-info-overlay">
                                 <h3>ドリームキャラバン</h3>
                                 <p>Sランクアニバーサリー契約書をGETしよう</p>
