Update image source from キャラバン.jpeg to キャラバン.jpg

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/キャラバン.jpeg?height=200&width=400" alt="イベント">
+                                    <img src="/picture/キャラバン.jpg?height=200&width=400" alt="イベント">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title">「日本縦断！ドリームキャラバン」開催！11月11日(火)14:59まで！</h3>
