Update event details in index.html

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/キャラバン.jpg?height=200&width=400" alt="イベント">
+                                    <img src="/picture/道場.jpg?height=200&width=400" alt="イベント">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">「日本縦断！ドリームキャラバン」開催！11月11日(火)14:59まで！</h3>
-                                    <p class="news-excerpt">アニバーサリー契約書（第一弾）をもらおう！効率的なやりかたは？</p>
-                                    <a href="event-kyaraban.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">育成できる神イベント！「皆伝！プロスピ道場」開催！11月18日(火)14:59まで！</h3>
+                                    <p class="news-excerpt">選手を強化・育成！効率的なやりかたは？</p>
+                                    <a href="event-doujou.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年11月04日</span>
+                                        <span class="news-date">2025年11月11日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
