Update image source in event-doujou.html

--- a/event-doujou.html
+++ b/event-doujou.html
@@ -97,7 +97,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/道場.jpeg?height=300&width=800" alt="皆伝！プロスピ道場">
+                            <img src="/picture/道場.jpg?height=300&width=800" alt="皆伝！プロスピ道場">
                             <div class="gacha-info-overlay">
                                 <h3>皆伝！プロスピ道場</h3>
                                 <p>球団会社のオーナーになって資金を稼ごう！</p>
