Change image format from JPG to JPEG

--- a/event-yakyuban.html
+++ b/event-yakyuban.html
@@ -96,7 +96,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/野球盤.jpg?height=300&width=800" alt="プロスピ野球盤バナー">
+                            <img src="/picture/野球盤.JPEG?height=300&width=800" alt="プロスピ野球盤バナー">
                             <div class="gacha-info-overlay">
                                 <h3>プロスピ野球盤</h3>
                                 <p>Sランクseries2契約書を含む豪華報酬を獲得できます</p>
