--- a/event-yakyuban.html
+++ b/event-yakyuban.html
@@ -152,7 +152,7 @@
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="ピッチングマシン選択">
+                                    <img src="/picture/IMG_0271.jpeg?height=150&width=250" alt="ピッチングマシン選択">
                                 </div>
                                 <div class="article-content">
                                     <h3>ピッチングマシンはAかBがおすすめ</h3>
