--- a/event-yakyuban.html
+++ b/event-yakyuban.html
@@ -162,7 +162,7 @@
 
                             <article class="article-card">
                                 <div class="article-image">
-                                    <img src="/placeholder.svg?height=150&width=250" alt="コース設定">
+                                    <img src="/picture/IMG_0269.jpeg?height=150&width=250" alt="コース設定">
                                 </div>
                                 <div class="article-content">
                                     <h3>コース設定で長打ゾーンを確実に狙いましょう</h3>
