--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="プロスピ,イベント,攻略,累計,調子くんのオーナーライフ,プロスピコロシアム,効率">
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <!-- Temporary redirect to event-hero.html -->
-    <meta http-equiv="refresh" content="0;url=event-homerun.html">
+    <meta http-equiv="refresh" content="0;url=event-market.html">
     <title>イベント攻略 - プロスピA攻略サイト</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
