Update news article details and image source

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/野球盤.JPEG?height=200&width=400" alt="イベント">
+                                    <img src="/picture/マーケット.jpg?height=200&width=400" alt="イベント">
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title">ひとりで楽しめる野球盤！新イベント「プロスピ野球盤」開催！11月28日(金)14:59まで！</h3>
-                                    <p class="news-excerpt">毎日コツコツ！効率的なやりかたは？</p>
-                                    <a href="event-yakyuban.html" class="section-link">記事を見る</a>
+                                    <h3 class="news-title">【プロスピA】プロスピマーケット攻略｜効率的なマニー稼ぎ・ミニゲーム解説【2025】</h3>
+                                    <p class="news-excerpt">プロスピマーケットの開催期間・マニー稼ぎ・ミニゲーム攻略を公式情報＋攻略記事を参考に解説</p>
+                                    <a href="event-market.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
-                                        <span class="news-date">2025年11月21日</span>
+                                        <span class="news-date">2025年12月10日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
