Update Open Graph image path in event-market.html

--- a/event-market.html
+++ b/event-market.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="【プロスピA】プロスピマーケット攻略｜効率的なマニー稼ぎ・ミニゲーム解説" />
     <meta property="og:description" content="プロスピマーケットの開催期間・マニー稼ぎ・ミニゲーム攻略を公式情報＋攻略記事を参考に解説。" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="/images/prospi-market-banner.jpg" />
+    <meta property="og:image" content="/picture/マーケット.jpg" />
 
     <link rel="stylesheet" href="/style.css" />
 </head>
