--- a/event-market.html
+++ b/event-market.html
@@ -155,9 +155,9 @@
 
                 <h3 class="mt-2">■ 優先度高い交換</h3>
                 <ol class="mt-1">
-                    <li><strong>Sランク確率30%契約書</strong></li>
-                    <li><strong>Sランク契約書の補助券</strong></li>
-                    <li><strong>Aランク自チーム契約書</strong></li>
+                    <li><strong>Aランク特訓コーチ</strong></li>
+                    <li><strong>Sランク特訓コーチ</strong></li>
+                    <li><strong>スピメダル</strong></li>
                 </ol>
             </section>
 
