--- a/event-netto.html
+++ b/event-netto.html
@@ -96,7 +96,7 @@
                         </div>
                         
                         <div class="gacha-banner">
-                            <img src="/picture/ねっとう/jpg?height=300&width=800" alt="熱闘スタジアムバナー">
+                            <img src="/picture/ねっとう.jpg?height=300&width=800" alt="熱闘スタジアムバナー">
                             <div class="gacha-info-overlay">
                                 <h3>熱闘スタジアム</h3>
                                 <p>OB第4弾Sランク契約書を含む豪華報酬を獲得できます</p>
