--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <div class="news-content">
                                     <h3 class="news-title">【プロスピA】熱闘スタジアム攻略！効率的な進め方とランキングボーダー目安は？</h3>
                                     <p class="news-excerpt">激アツOB第4弾が無料でもらえる！熱闘スタジアムの進め方の完全攻略。</p>
-                                    <a href="event-market.html" class="section-link">記事を見る</a>
+                                    <a href="event-netto.html" class="section-link">記事を見る</a>
                                     <div class="news-meta">
                                         <span class="news-date">2025年12月26日</span>
                                         <span class="news-category">イベント</span>
