--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2 class="hero-title">【プロスピA】最強攻略サイト</h2>
+                <h2 class="hero-title">【プロスピA】攻略サイト</h2>
                 <p class="hero-subtitle">OB第4弾・熱闘スタジアムの最新情報と最強選手評価を毎日更新！</p>
                 <div class="hero-buttons">
                     <a href="gacha.html" class="btn btn-primary">OB第4弾ガチャ評価</a>
@@ -166,7 +166,7 @@
                             <!-- 記事1: 熱闘スタジアム -->
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/nettou_stadium_banner.jpg?height=200&width=400" alt="熱闘スタジアム攻略">
+                                    <img src="/picture/ねっとう.jpg?height=200&width=400" alt="熱闘スタジアム攻略">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title"><a href="event-netto.html">【熱闘スタジアム攻略】OB第4弾！効率的な進め方と最新ボーダー予想</a></h3>
@@ -181,7 +181,7 @@
                             <!-- 記事2: OB第4弾ガチャ評価 -->
                             <article class="news-card">
                                 <div class="news-image">
-                                    <img src="/picture/ob4_gacha_banner.jpg?height=200&width=400" alt="OB第4弾ガチャ評価">
+                                    <img src="/picture/年末2025.jpg?height=200&width=400" alt="OB第4弾ガチャ評価">
                                 </div>
                                 <div class="news-content">
                                     <h3 class="news-title"><a href="ob4_gacha_review.html">【OB第4弾ガチャ評価】松坂・バースは引くべき？当たり選手ランキング！</a></h3>
