--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO OPTIMIZATION: 検索結果でクリックを誘うタイトルとディスクリプションに刷新 -->
-    <meta name="description" content="【プロスピA攻略】最新イベント「調子くんのオーナーライフ」を最速攻略！OB第4弾ガチャ評価、最強選手ランキング、リセマラ、初心者ガイドなど、1万PVを目指す攻略情報を毎日更新。">
-    <meta name="keywords" content="プロスピA,プロ野球スピリッツA,攻略,選手評価,イベント,ガチャ,リセマラ,調子くんのオーナーライフ,OB第4弾,最強">
+    <meta name="description" content="【プロスピA攻略】最新イベントを最速攻略！ガチャ評価、最強選手ランキング、リセマラ、初心者ガイドなど、攻略情報を毎日更新。">
+    <meta name="keywords" content="プロスピA,プロ野球スピリッツA,攻略,選手評価,イベント,ガチャ,リセマラ,ファンレター,OB第4弾,最強">
     <meta name="author" content="プロスピA攻略サイト">
     <meta name="c8282260dbcb9470c838cea1b9419dae4556e3e1" content="c8282260dbcb9470c838cea1b9419dae4556e3e1" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://purosupi-a.f5.si/">
-    <meta property="og:title" content="【プロスピA攻略】最新イベント・OB第4弾情報 - プロスピA攻略サイト">
+    <meta property="og:title" content="【プロスピA攻略】最新イベント・ガチャ情報 - プロスピA攻略サイト">
     <meta property="og:description" content="プロ野球スピリッツAの最新攻略情報、選手評価、イベント情報を詳しく解説">
     <meta property="og:image" content="https://purosupi-a.f5.si/image.jpg">
 
@@ -32,7 +32,7 @@
     <meta property="twitter:description" content="プロ野球スピリッツAの最新攻略情報、選手評価、イベント情報を詳しく解説">
     <meta property="twitter:image" content="https://purosupi-a.f5.si/image.jpg">
 
-    <title>【プロスピA攻略】最新イベント「調子くんのオーナーライフ」・OB第4弾情報 - プロスピA攻略サイト</title>
+    <title>【プロスピA攻略】最新イベント・OB第4弾情報 - プロスピA攻略サイト</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -167,14 +167,14 @@
                                 <div class="news-image">
                                     <!-- 画像なしのため、代替のHTML構造で強調 -->
                                     <div style="background: linear-gradient(45deg, #007bff, #0056b3); color: white; padding: 2rem; text-align: center; height: 200px; display: flex; align-items: center; justify-content: center;">
-                                        <h3 style="font-size: 1.5rem;">開催中！オーナーライフ</h3>
+                                        <h3 style="font-size: 1.5rem;">開催中！ファンレターミッション！</h3>
                                     </div>
                                 </div>
                                 <div class="news-content">
-                                    <h3 class="news-title"><a href="event-owner.html">【調子くんのオーナーライフ攻略】効率的な資金稼ぎと施設強化の優先順位</a></h3>
-                                    <p class="news-excerpt">累計Sランク契約書を最速で回収！無課金でも完走できる効率的な進め方と、事業強化のコツを徹底解説。</p>
+                                    <h3 class="news-title"><a href="event-fanletter.html">【ファンレターミッション攻略】効率的なやりかたとコツを紹介</a></h3>
+                                    <p class="news-excerpt">累計Sランク30％契約書を最速で回収！無課金でも完走できる効率的な進め方と、コツを徹底解説。</p>
                                     <div class="news-meta">
-                                        <span class="news-date">2026年1月16日</span>
+                                        <span class="news-date">2026年1月21日</span>
                                         <span class="news-category">イベント</span>
                                     </div>
                                 </div>
