SEO改善: 「リセマラ 進め方」CTRを高めるためにタイトル・見出しを最適化

--- a/reroll.html
+++ b/reroll.html
@@ -13,10 +13,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO OPTIMIZATION: 最新情報とキーワードを盛り込みCTRを向上 -->
-    <meta name="description" content="【プロスピA】リセマラ当たりランキング2025最新版！OB第4弾の最強選手を徹底評価。効率的なリセマラ方法と、リセマラの終了ラインを完全解説。">
+    <meta name="description" content="【プロスピA】リセマラを最速で終わらせる効率的なやり方・進め方を完全解説！2026年最新の当たりランキングと終了ラインも紹介。">
     <meta name="keywords" content="プロスピA,リセマラ,当たり,ランキング,効率,OB第4弾,最強,2025">
     
-    <title>【プロスピA】リセマラ当たりランキング2025最新版！OB第4弾対応</title>
+    <title>【プロスピA】リセマラ最速攻略2026！効率的なやり方・進め方と当たりランキング</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css-reroll.css">
@@ -104,7 +104,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1 class="page-title">【プロスピA】リセマラ当たりランキング2025最新版！</h1>
+            <h1 class="page-title">【プロスピA】リセマラ最速攻略2026！効率的なやり方・進め方と当たりランキング</h1>
             <p class="page-subtitle">最強のSランク選手を最速で入手！リセマラの完全ガイド</p>
         </div>
     </section>
@@ -138,7 +138,7 @@
 
                     <!-- Reroll Method -->
                     <section class="section reroll-method">
-                        <h2 class="section-title">📱 効率的なリセマラ方法と手順</h2>
+                        <h2 class="section-title">📱 最速で終わる！効率的なリセマラのやり方・手順</h2>
                         <div class="method-steps">
                             <div class="step-card">
                                 <div class="step-number">1</div>
